AWS SDK for Java 1.8.5